add: AI chat env variables to docker compose

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -123,6 +123,16 @@ services:
       SERVICE_LOGGING_ASPECT_LEVEL: "${SERVICE_LOGGING_ASPECT_LEVEL:-ERROR}"
       CONTROLLER_LOGGING_REQUEST_ARGS: "${CONTROLLER_LOGGING_REQUEST_ARGS:-false}"
       SERVICE_LOGGING_REQUEST_ARGS: "${SERVICE_LOGGING_REQUEST_ARGS:-false}"
+      # AI Configuration
+      # Gemini
+      GEMINI_API_KEY: "${GEMINI_API_KEY}"
+      GEMINI_BASE_URL: "${GEMINI_BASE_URL}"
+      GEMINI_MODEL: "${GEMINI_MODEL}"
+      # Local LLM or GPT
+      LLM_API_KEY: "${LLM_API_KEY}"
+      LLM_API_BASE_URL: "${LLM_API_BASE_URL}"
+      LLM_API_COMPLETIONS_PATH: "${LLM_API_COMPLETIONS_PATH}"
+      LLM_MODEL: "${LLM_MODEL}"
     networks:
       - backend
       - database
